# climenu

./: Makefile  README.md  pyproject.toml
src/climenu/app_config/: io.py  model.py  paths.py
src/climenu/infrastructure/serialized_io/: __init__.py  _registry.py  errors.py  serialized_data_io.py
src/climenu/infrastructure/serialized_io/codecs/: __init__.py  base.py  json_codec.py  yaml_codec.py
