[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climenu"
version = "0.1.0"
description = "cli helper"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.12.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pyright",  
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E203", # конфликт с форматтером
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
